setup basic nav

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,6 @@
 <%- include ("partials/header") %>
 <%- include ("partials/navbar") %>
 
+
+<script src="/js/navbar.js"></script>
 <%- include ("partials/footer") %>
