--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-dark" id="myNavbar">
-  <a class="navbar-brand"></a> 
+<nav class="navbar navbar-expand-lg navbar-light bg-dark" id="Navbar">
+  <a class="navbar-brand"><i class="fab fa-affiliatetheme"></i>Modern Site</a> 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
