--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,10 +1,214 @@
-nav#Navbar {
+/* Basic styling */
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+
+}
+*:focus {
+    outline: none;
+}
+body {
+    font-family: sans-serif;
+    font-size: 16px;
+}
+nav {
+    background-image: url("/images/navbarbackground.jpg");
+    padding: 0 15px;
+	min-height:600px;
+	
+}
+a {
+    color: white;
+    text-decoration: none;
+}
+li{
+	list-style:none;
+}
+ul.menu{
+	align-items:center;
+}
+li.toggle{
+	color:black !important;
+}
+li.btn{
 	background:none !important;
+	border:none;
+}
+.submenu {   
+    list-style-type: none;
+}
+.logo {
+    font-size: 20px;
+    padding: 7.5px 10px 7.5px 0;
+}
+.item {
+    padding: 10px;
+	
+}
+.item.btn {
+    padding: 9px 5px;
+	margin-top:5px;
+
+	
+}
+.item a{
+	color:white !important;
+}
+.item:not(.btn) a:hover,
+.item a:hover::after {
+    color: white !important;
+}
+i{
+	margin-right:15px;
+	align-items:center;
+}
+
+/* Mobile menu */
+.menu {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+.menu li a {
+    display: block;
+    padding: 15px 5px;
+}
+.menu li.subitem a {
+    padding: 15px;
+}
+.toggle {
+    order: 1;
+    font-size: 20px;
+}
+
+.item.btn {
+    order: 2;
+}
+.item {
+    order: 3;
+    width: 100%;
+    text-align: center;
+    display: none;
+}
+.active .item {
+    display: block;
+}
+.btn.success { /* divider between buttons and menu links */
+    border-bottom: 1px #444 solid;
 	
 }
 
-div#navbarNav{
-	display:flex;
-	justify-content:flex-end;
-	
+/* Submenu up from mobile screens */
+.submenu {
+    display: none;
+}
+.submenu-active .submenu {
+   display: block;
+}
+.has-submenu i {
+    
+}
+.has-submenu > a::after {
+    font-family: "Font Awesome 5 Free";
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: 900; 
+    content: "\f078";
+    color: black;
+    padding-left: 5px;
+}
+.subitem a {
+    padding: 10px 15px;
+}
+.submenu-active {
+    background-color: none;
+    border-radius: 3px;
+}
+
+/* Tablet menu */
+@media all and (min-width: 700px) {
+    .menu {
+        justify-content: center;
+    }
+    .logo {
+        flex: 1;
+    }
+    .item.btn {
+        width: auto;
+        order: 1;
+        display: block;
+    }
+    .toggle {
+        flex: 1;
+        text-align: right;
+        order: 2;
+    }
+    /* Button up from tablet screen */
+    .menu li.btn a {
+        padding: 10px 15px;
+        margin: 5px 0;
+    }
+    .btn a {
+        background: #0080ff;
+        
+    }
+    .btn.success {
+        border: 0;
+    }
+    .btn.success a {
+        background: transparent;
+          
+    }
+    .btn a:hover {
+        text-decoration: none;
+    }
+    .btn:not(.success) a:hover {
+        background: royalblue;
+        border-color: darkblue;
+    }
+	li.item{
+	color:white;
+	}
+}
+
+
+/* Desktop menu */
+@media all and (min-width: 960px) {
+    .menu {
+        align-items: flex-start;     
+        flex-wrap: nowrap;
+        background: none;
+    }
+    .logo {
+        order: 0;
+    }
+    .item {
+        order: 1;
+        position: relative;
+        display: block; 
+        width: auto;
+    }
+    .btn {
+        order: 2;
+    }
+    .submenu-active .submenu {
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 68px;
+        background: none;
+		
+		
+    }
+    .toggle {
+        display: none;
+		
+    }
+    .submenu-active {
+        border-radius: 0;
+		
+    }
+
 }
