--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,17 +1,30 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-dark" id="Navbar">
-  <a class="navbar-brand"><i class="fab fa-affiliatetheme"></i>Modern Site</a> 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/about"><i class="fas fa-question-circle"></i> About</a>
-      </li>
-	
+<nav>
+    <ul class="menu">
+        <li class="logo"><a href="#"><i class="fas fa-atom fa-2x"></i>Modern-Site</a></li>
+        <li class="item"><a href="#"><i class="fas fa-home fa-2x"></i>Home</a></li>
+        <li class="item"><a href="#"><i class="far fa-question-circle fa-2x"></i>About</a></li>
+        <li class="item has-submenu">
+            <a tabindex="0"><i class="fab fa-servicestack fa-2x"></i>Services</a>
+            <ul class="submenu">
+                <li class="subitem"><a href="#">Design</a></li>
+                <li class="subitem"><a href="#">Development</a></li>
+                <li class="subitem"><a href="#">SEO</a></li>
+                <li class="subitem"><a href="#">Copywriting</a></li>
+            </ul>
+        </li>
+        <li class="item has-submenu">
+            <a tabindex="0"><i class="fas fa-seedling fa-2x"></i>Plans</a>
+            <ul class="submenu">
+                <li class="subitem"><a href="#">Freelancer</a></li>
+                <li class="subitem"><a href="#">Startup</a></li>
+                <li class="subitem"><a href="#">Enterprise</a></li>
+            </ul>
+        </li>
+        <li class="item"><a href="#"><i class="fas fa-blog fa-2x"></i>Blog</a></li>
+        <li class="item"><a href="#"><i class="far fa-id-card fa-2x"></i>Contact</a>
+        </li>
+        <li class="item btn btn-primary"><i class="fas fa-sign-in-alt fa-2x"></i>Log In</a></li>
+        <li class="item btn btn-success"><i class="fas fa-user-plus fa-2x"></i>Sign Up</a></li>
+        <li class="toggle"><i class="fas fa-bars"></i></a></li>
     </ul>
-  </div>
 </nav>
