--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,27 @@
 <%- include ("partials/header") %>
 <%- include ("partials/navbar") %>
 
+<div class="container">
+	<div class="row">
+		<div class="col-12 col-md-6">
+			<img src ="https://images.unsplash.com/photo-1431411207774-da3c7311b5e8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+			<p>This beautiful landscape is only a phonecall away!</p>
+		</div>
+		<div class="col-12 col-md-6">
+			<img src="https://images.unsplash.com/photo-1419064642531-e575728395f2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+			<p>Book with us today to start the adventure of a lifetime!</p>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-12 col-md-6">
+			
+		</div>
+		<div class="col-12 col-md-6">
+			
+		</div>
+	</div>
+</div>
 
 <script src="/js/navbar.js"></script>
 <%- include ("partials/footer") %>
