--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,23 +1,43 @@
 <%- include ("partials/header") %>
 <%- include ("partials/navbar") %>
 
-<div class="container">
+<div class="container-fluid">
+	<div class="row header">
+		<div class="col-12">
+			<img src="/images/navbarbackground.jpg">
+		</div>
+		
+	</div>
 	<div class="row">
 		<div class="col-12 col-md-6">
 			<img src ="https://images.unsplash.com/photo-1431411207774-da3c7311b5e8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
-			<p>This beautiful landscape is only a phonecall away!</p>
-		</div>
-		<div class="col-12 col-md-6">
-			<img src="https://images.unsplash.com/photo-1419064642531-e575728395f2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
-			<p>Book with us today to start the adventure of a lifetime!</p>
-		</div>
-	</div>
-	
-	<div class="row">
-		<div class="col-12 col-md-6">
 			
 		</div>
 		<div class="col-12 col-md-6">
+			<p>This beautiful landscape is one of many choice destinations only a phonecall away!</p>
+			<p>Book with us today to start the adventure of a lifetime at one of our primier getaway destination!</p>
+		</div>
+	</div>
+	<div class="row ">
+		<div class="col-12 link-line">
+			<a href="#"><i class="fas fa-campground fa-2x"></i>Camping</a>
+			<a href="#"><i class="fas fa-caravan fa-2x"></i>Glamping</a>
+			<a href="#"><i class="fas fa-hiking fa-2x"></i>Hiking</a>
+			<a href="#"><i class="fas fa-water fa-2x"></i>Rafting</a>
+			<a href="#"><i class="fas fa-skiing fa-2x"></i>Skiing</a>
+			<a href="#"><i class="fas fa-glass-martini-alt fa-2x"></i>Getaway</a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-12 col-md-6 testimonial">
+			<img src ="https://images.unsplash.com/photo-1568454537842-d933259bb258?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+			<p>Modern Site helped me book an amazing hiking getaway! I will never forget the feeling of summiting this mountain, Thanks Modern Site!</p>
+			<p>- James T. Smith</p>			
+		</div>
+		<div class="col-12 col-md-6 testimonial">
+			<img src ="https://images.unsplash.com/photo-1594814957616-e660dbddbddc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+			<p>With Modern Site I was able to take the tropical vacation I have always wanted to take but couldnt afford! Thanks for making this dream possbile Modern Site!</p>
+			<p>- Justin F. Bartostos</p>
 			
 		</div>
 	</div>
