--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav>
+<nav class="navbar navbar-expand-md">
     <ul class="menu">
         <li class="logo"><a href="#"><i class="fas fa-atom fa-2x"></i>Modern-Site</a></li>
         <li class="item"><a href="#"><i class="fas fa-home fa-2x"></i>Home</a></li>
