--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,5 +9,6 @@
 		<link rel="stylesheet" href="/css/navbar.css">
 		<link rel="stylesheet" href="/css/footer.css">
 		<link rel="stylesheet" href="/css/index.css">
+		<script src="https://code.jquery.com/jquery-latest.js"></script>
 	</head>
 	<body>
