--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,28 @@
 			<p>Book with us today to start the adventure of a lifetime at one of our primier getaway destination!</p>
 		</div>
 	</div>
+	<hr>
+	<div class="row">
+		<div class="col-12 col-md-6">
+			<p>Enjoy a relaxing getaway with your significant other! </p>
+			<p>Hotels and fine dining or a rustic cabin and a remote relaxing picnic overlooking a sunet, Modern Site has you covered!</p>
+		</div>
+		<div class="col-12 col-md-6">
+			<img src ="https://images.unsplash.com/photo-1590166774851-bc49b23a18fe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">			
+		</div>
+	</div>
+	<hr>
+	<div class="row">
+		<div class="col-12 col-md-6">
+			<img src ="https://images.unsplash.com/photo-1594822530787-629c38ba7887?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+			
+		</div>
+		<div class="col-12 col-md-6">
+			<p>Want a vacation you'll never forget?</p>
+			<p>Modern Site has destination packages including "The Seven Wonders Of The World" package!</p>
+		</div>
+	</div>
+	<hr>
 	<div class="row ">
 		<div class="col-12 link-line">
 			<a href="#"><i class="fas fa-campground fa-2x"></i>Camping</a>
