added more testimonials

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,8 +59,19 @@
 		<div class="col-12 col-md-6 testimonial">
 			<img src ="https://images.unsplash.com/photo-1594814957616-e660dbddbddc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
 			<p>With Modern Site I was able to take the tropical vacation I have always wanted to take but couldnt afford! Thanks for making this dream possbile Modern Site!</p>
-			<p>- Justin F. Bartostos</p>
-			
+			<p>- Justin F. Bartostos</p>			
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-12 col-md-6 testimonial">
+			<img src ="https://travel.home.sndimg.com/content/dam/images/travel/fullset/2015/10/12/new-seven-wonders-chichen-itza.jpg.rend.hgtvcom.616.462.suffix/1491581548887.jpeg">
+			<p>With Modern Sites "Seven Wonders" Package I was able to see the most fascinating places in the world! Thank you Modern Site for a once in a life time experience! </p>
+			<p>- Shannon B. Tartarous</p>			
+		</div>
+		<div class="col-12 col-md-6 testimonial">
+			<img src ="https://images.unsplash.com/photo-1593176507419-1cb51a633c36?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+			<p>With their easy and stress free booking I was able to bring my girlfriend to Paris and pop the question! Thanks Modern Site!</p>
+			<p>- Paul .G Burns</p>			
 		</div>
 	</div>
 </div>
