--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
 		</div>
 	</div>
 	<hr>
-	<div class="row ">
+	<div class="row nav2">
 		<div class="col-12 link-line">
 			<a href="#"><i class="fas fa-campground fa-2x"></i>Camping</a>
 			<a href="#"><i class="fas fa-caravan fa-2x"></i>Glamping</a>
