--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,23 +4,23 @@
         <li class="item"><a href="#"><i class="fas fa-home fa-2x"></i>Home</a></li>
         <li class="item"><a href="#"><i class="far fa-question-circle fa-2x"></i>About</a></li>
         <li class="item has-submenu">
-            <a tabindex="0"><i class="fab fa-servicestack fa-2x"></i>Services</a>
+            <a tabindex="0"><i class="fas fa-globe fa-2x"></i>Services</a>
             <ul class="submenu">
-                <li class="subitem"><a href="#">Design</a></li>
-                <li class="subitem"><a href="#">Development</a></li>
-                <li class="subitem"><a href="#">SEO</a></li>
-                <li class="subitem"><a href="#">Copywriting</a></li>
+                <li class="subitem"><a href="#"><i class="fas fa-plane"></i>Travel</a></li>
+                <li class="subitem"><a href="#"><i class="fas fa-hotel"></i>Hotel</a></li>
+                <li class="subitem"><a href="#"><i class="fas fa-utensils"></i>Dining</a></li>
+                <li class="subitem"><a href="#"><i class="fas fa-skiing"></i>Excitment</a></li>
             </ul>
         </li>
         <li class="item has-submenu">
-            <a tabindex="0"><i class="fas fa-seedling fa-2x"></i>Plans</a>
+            <a tabindex="0"><i class="fas fa-box-open fa-2x"></i>Packages</a>
             <ul class="submenu">
-                <li class="subitem"><a href="#">Freelancer</a></li>
-                <li class="subitem"><a href="#">Startup</a></li>
-                <li class="subitem"><a href="#">Enterprise</a></li>
+                <li class="subitem"><a href="#">Seven Wonders Of The World</a></li>
+                <li class="subitem"><a href="#">Dream Vacation</a></li>
+                <li class="subitem"><a href="#">Remote Getaway</a></li>
             </ul>
         </li>
-        <li class="item"><a href="#"><i class="fas fa-blog fa-2x"></i>Blog</a></li>
+        <li class="item"><a href="#"><i class="far fa-comment-dots fa-2x"></i>Testimonials</a></li>
         <li class="item"><a href="#"><i class="far fa-id-card fa-2x"></i>Contact</a>
         </li>
         <li class="item btn btn-primary"><i class="fas fa-sign-in-alt fa-2x"></i>Log In</a></li>
