--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,9 +1,8 @@
 body,html{
-background: #232526;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 margin:0;
 width:100%;
+	background-color:#96B1E9;
 }
 .container-fluid{
 	max-width:100%;
@@ -31,7 +30,7 @@ div.link-line{
 	padding-left:10px;
 	padding-right:10px;
 	height:75px;
-	background-color:#2E213E;
+	background:#364AA7;
 	margin-bottom:15px
 }
 div.testimonial{
@@ -40,13 +39,17 @@ div.testimonial{
 }
 img{
 	max-height:650px;
-	margin-bottom:10px;
+	margin-bottom:40px;
 	
 }
 p{
 	text-align:center;
 	color:#FFF;
 	max-width:450px;
+	margin-bottom:40px;
+	font-size:22px;
+	font-family: 'Roboto', sans-serif;
+	font-weight:400;
 }
 
 @media screen and (max-width: 600px) {
@@ -54,12 +57,19 @@ p{
   	width: 100%;
   	display: flex;
   	justify-content:center;
-  	flex-wrap: wrap;	
+  	flex-wrap: wrap;
+	flex-direction:column;
 	}
 	div.col-12.link-line a{
 	display:flex;
 	flex-direction:column;
 	font-size:14px;
 	max-width:100%:
+	}
+	div.row.right{
+	flex-direction: column-reverse !important;
+	}
+	.nav2{
+		
 	}
 }
