--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,56 @@
 
   <!-- Site footer -->
+
+	
+
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6">
+            <h5>About</h5>
+            <p class="text-justify">Ad cetero labitur repudiare per, sint fabellas an vix. Est in dolor tollit invenire, ea vis vidit veniam tibique, ad lorem detracto eam. Ignota blandit ut nam, usu augue accusam scriptorem te. Meliore delicatissimi at eam, cu virtute sanctus qui. Qui ad hinc lucilius interpretaris, virtute moderatius qui ea. Est duis apeirian imperdiet eu, persequeris definitionem in mea.
+
+No vim purto malorum. Sea debitis explicari in. Vim ad solet audiam maiestatis, sea an dissentiet consectetuer, vero graeci consetetur eam et. Pro in exerci suscipiantur. Esse rebum salutatus in eos, ad delenit dissentias has, est ut velit appareat rationibus. Cu usu numquam commune laboramus, an mutat eleifend vis.</p>
+          </div>
+			
+          <div class="col-xs-6 col-md-3">
+            <h5>Categories</h5>
+            <ul class="footer-links">
+              <li><a href="#">Booking</a></li>
+              <li><a href="#">Trip Catalog</a></li>
+              <li><a href="#">Financing</a></li>
+                       </ul>
+          </div>
+
+          <div class="col-xs-6 col-md-3">
+            <h5>Quick Links</h5>
+            <ul class="footer-links">
+              <li><a href="/about">About Us</a></li>
+              <li><a href="/contact">Contact Us</a></li>
+              <li><a href="#">Contribute</a></li>
+              <li><a href="https://www.privacypolicies.com/generic/">Privacy Policy</a></li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+		
+      <div class="container icons">
+        <div class="row">
+          <div class="col-md-8 col-sm-6 col-xs-12">
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <ul class="social-icons">
+              <li><a class="facebook" href="https://www.facebook.com"><i class="fab fa-facebook fa-3x"></i></a></li>
+              <li><a class="twitter" href="https://www.twitter.com"><i class="fab fa-twitter fa-3x"></i></a></li>
+              <li><a class="instagram" href="https://www.instagram.com"><i class="fab fa-instagram fa-3x"></i></a></li>
+              <li><a class="linkedin" href="https://www.linkedin.com"><i class="fab fa-linkedin-in fa-3x"></i></a></li>   
+            </ul>
+          </div>
+        </div>
+      </div>		
+</footer>
+
 <script>function myFunction() {
   var x = document.getElementById("myNavbar");
   if (x.className === "navbar") {
@@ -8,5 +59,7 @@
     x.className = "navbar";
   }
 }</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	</body>
 </html>
