added basic content

--- a/views/packages.ejs
+++ b/views/packages.ejs
@@ -1,3 +1,93 @@
 <%- include ("partials/header") %>
 <%- include ("partials/navbar") %>
+
+
+<div class="container-fluid card-holder">
+	<div class="row">
+	<div class ="col col-12">
+		<div class="card">
+  			<img src="https://images.unsplash.com/photo-1576176539998-0237d1ac6a85?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+  		<div class="container">
+    		<h2 class="vacation-title">Vacation 1</h2>
+    		<h4 class="vacation-desc">Vacation 1 name</h4>
+   		</div>
+		</div>
+	</div>
+	</div>
+
+
+	<div class="row">
+	<div class ="col col-12">
+		<div class="card">
+  			<img src="https://images.unsplash.com/photo-1500259783852-0ca9ce8a64dc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Avatar" style="width:100%">
+  		<div class="container">
+    		<h2 class="vacation-title">Vacation 2</h2>
+    		<h4 "vacation-desc">Vacation 2 name</h4>
+   		</div>
+		</div>
+	</div>
+	</div>
+
+
+	<div class="row">
+	<div class ="col col-12">
+		<div class="card">
+  			<img src="img_avatar.png" alt="Avatar" style="width:100%">
+  		<div class="container">
+    		<h2 class="vacation-title">Vacation 3</h2>
+    		<h4 class="vacation-desc">Vacation 3 name</h4>
+   		</div>
+		</div>
+	</div>
+	</div>	
+</div>
+
+<div class="container-fluid card-holder">
+	<div class="row">
+	<div class ="col col-12">
+		<div class="card">
+  			<img src="img_avatar.png" alt="Avatar" style="width:100%">
+  		<div class="container">
+    		<h2><b>Vacation 4</b></h2>
+    		<h4 class="vacation-desc">Vacation 4 name</h4>
+   		</div>
+		</div>
+	</div>
+	</div>
+
+
+	<div class="row">
+	<div class ="col col-12">
+		<div class="card">
+  			<img src="img_avatar.png" alt="Avatar" style="width:100%">
+  		<div class="container">
+    		<h2><b>Vacation 5</b></h2>
+    		<p>Vacation 5 name</p>
+   		</div>
+		</div>
+	</div>
+	</div>
+
+
+	<div class="row">
+	<div class ="col col-12">
+		<div class="card">
+  			<img src="img_avatar.png" alt="Avatar" style="width:100%">
+  		<div class="container">
+    		<h2><b>Vacation 6</b></h2>
+    		<p>Vacation 6 name</p>
+   		</div>
+		</div>
+	</div>
+	</div>	
+</div>
+
+
+
+
+
+
+
+
+
 <%- include ("partials/footer") %>
