--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="/css/navbar.css">
 		<link rel="stylesheet" href="/css/footer.css">
+		<link rel="stylesheet" href="/css/packages.css">
 		<link rel="stylesheet" href="/css/index.css">
 		<script src="https://code.jquery.com/jquery-latest.js"></script>
 	</head>
