--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,11 @@
 		<div class="col-12">
 			<img src="/images/navbarbackground.jpg">
 		</div>
-		
+
 	</div>
 	<div class="row">
 		<div class="col-12 col-md-6">
-			<img src ="https://images.unsplash.com/photo-1431411207774-da3c7311b5e8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+			<img class="dest" src ="https://images.unsplash.com/photo-1431411207774-da3c7311b5e8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
 			
 		</div>
 		<div class="col-12 col-md-6">
@@ -25,13 +25,13 @@
 			<p>Hotels and fine dining or a rustic cabin and a remote relaxing picnic overlooking a sunet, Modern Site has you covered!</p>
 		</div>
 		<div class="col-12 col-md-6">
-			<img src ="https://images.unsplash.com/photo-1590166774851-bc49b23a18fe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">			
+			<img class="dest" src ="https://images.unsplash.com/photo-1590166774851-bc49b23a18fe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">			
 		</div>
 	</div>
 	
 	<div class="row">
 		<div class="col-12 col-md-6">
-			<img src ="https://images.unsplash.com/photo-1594822530787-629c38ba7887?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+			<img class="dest" src ="https://images.unsplash.com/photo-1594822530787-629c38ba7887?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
 			
 		</div>
 		<div class="col-12 col-md-6">
@@ -52,24 +52,24 @@
 	</div>
 	<div class="row">
 		<div class="col-12 col-md-6 testimonial">
-			<img src ="https://images.unsplash.com/photo-1568454537842-d933259bb258?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+			<img class="test" src ="https://images.unsplash.com/photo-1568454537842-d933259bb258?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
 			<p>Modern Site helped me book an amazing hiking getaway! I will never forget the feeling of summiting this mountain, Thanks Modern Site!</p>
 			<p>- James T. Smith</p>			
 		</div>
 		<div class="col-12 col-md-6 testimonial">
-			<img src ="https://images.unsplash.com/photo-1594814957616-e660dbddbddc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+			<img class="test" src ="https://images.unsplash.com/photo-1594814957616-e660dbddbddc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
 			<p>With Modern Site I was able to take the tropical vacation I have always wanted to take but couldnt afford! Thanks for making this dream possbile Modern Site!</p>
 			<p>- Justin F. Bartostos</p>			
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-12 col-md-6 testimonial">
-			<img src ="https://travel.home.sndimg.com/content/dam/images/travel/fullset/2015/10/12/new-seven-wonders-chichen-itza.jpg.rend.hgtvcom.616.462.suffix/1491581548887.jpeg">
+			<img class="test" src="https://travel.home.sndimg.com/content/dam/images/travel/fullset/2015/10/12/new-seven-wonders-chichen-itza.jpg.rend.hgtvcom.616.462.suffix/1491581548887.jpeg">
 			<p>With Modern Sites "Seven Wonders" Package I was able to see the most fascinating places in the world! Thank you Modern Site for a once in a life time experience! </p>
 			<p>- Shannon B. Tartarous</p>			
 		</div>
 		<div class="col-12 col-md-6 testimonial">
-			<img src ="https://images.unsplash.com/photo-1593176507419-1cb51a633c36?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+			<img class="test"  src ="https://images.unsplash.com/photo-1593176507419-1cb51a633c36?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
 			<p>With their easy and stress free booking I was able to bring my girlfriend to Paris and pop the question! Thanks Modern Site!</p>
 			<p>- Paul .G Burns</p>			
 		</div>
