--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md">
     <ul class="menu">
-        <li class="logo"><a href="#"><i class="fas fa-atom fa-2x"></i>Modern-Site</a></li>
+        <li class="logo"><a href="/"><i class="fas fa-atom fa-2x"></i>Modern-Site</a></li>
         <li class="item"><a href="#"><i class="fas fa-home fa-2x"></i>Home</a></li>
         <li class="item"><a href="#"><i class="far fa-question-circle fa-2x"></i>About</a></li>
         <li class="item has-submenu">
@@ -18,6 +18,7 @@
                 <li class="subitem"><a href="#">Seven Wonders Of The World</a></li>
                 <li class="subitem"><a href="#">Dream Vacation</a></li>
                 <li class="subitem"><a href="#">Remote Getaway</a></li>
+				<li class="subitem"><a href="/packages">See All</a></li>
             </ul>
         </li>
         <li class="item"><a href="#"><i class="far fa-comment-dots fa-2x"></i>Testimonials</a></li>
