setup temp packages page

--- a/views/packages.ejs
+++ b/views/packages.ejs
@@ -1,10 +1,12 @@
 <%- include ("partials/header") %>
 <%- include ("partials/navbar") %>
-
+<div class="container-fluid">
+	<img class ="packages-header" src="https://i.pinimg.com/originals/d2/46/4b/d2464bc41fbf850d91a446dfb7abdf15.jpg">
+</div>
 	
 	<div class="container-fluid vacation-container">	
 	
-		<div class="row">
+		<div class="row vacation-row">
 			<% Vacation.forEach((v) => { %>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				
