--- a/public/css/packages.css
+++ b/public/css/packages.css
@@ -3,7 +3,10 @@ body,html{
 	width:100%;
 	margin:0;
 }
-
+img.packages-header{
+	height:500px;
+	width:100%;
+}
 
 ul li{
 	list-style:none;	
@@ -11,8 +14,8 @@ ul li{
 /* ------------------ */
 
 /* keeps navbar above page */
-div.container-fluid.vacation-container{
-	margin-top:9vh;
+div.vacation-row{
+	
 }
 /* ------------------ */
 
