setup auth login/signup

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -24,7 +24,7 @@
         <li class="item"><a href="#"><i class="far fa-comment-dots fa-2x"></i>Testimonials</a></li>
         <li class="item"><a href="#"><i class="far fa-id-card fa-2x"></i>Contact</a>
         </li>
-        <li class="item btn btn-primary"><i class="fas fa-sign-in-alt fa-2x"></i>Log In</a></li>
+        <li class="item btn btn-primary"><a href="/login"><i class="fas fa-sign-in-alt fa-2x"></i>Log In</a></li>
         <li class="item btn btn-success"><i class="fas fa-user-plus fa-2x"></i>Sign Up</a></li>
         <li class="toggle"><i class="fas fa-bars"></i></a></li>
     </ul>
