--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="/css/navbar.css">
 		<link rel="stylesheet" href="/css/footer.css">
 		<link rel="stylesheet" href="/css/packages.css">
+		<link rel="stylesheet" href="/css/login.css">
 		<link rel="stylesheet" href="/css/index.css">
 		<script src="https://code.jquery.com/jquery-latest.js"></script>
 	</head>
