--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md">
     <ul class="menu">
         <li class="logo"><a href="/"><i class="fas fa-atom fa-2x"></i>Modern-Site</a></li>
-        <li class="item"><a href="#"><i class="fas fa-home fa-2x"></i>Home</a></li>
+        
         <li class="item"><a href="#"><i class="far fa-question-circle fa-2x"></i>About</a></li>
         <li class="item has-submenu">
             <a tabindex="0"><i class="fas fa-globe fa-2x"></i>Services</a>
@@ -24,8 +24,8 @@
         <li class="item"><a href="#"><i class="far fa-comment-dots fa-2x"></i>Testimonials</a></li>
         <li class="item"><a href="#"><i class="far fa-id-card fa-2x"></i>Contact</a>
         </li>
-        <li class="item btn btn-primary"><a href="/login"><i class="fas fa-sign-in-alt fa-2x"></i>Log In</a></li>
-        <li class="item btn btn-success"><i class="fas fa-user-plus fa-2x"></i>Sign Up</a></li>
+        <li class="item"><a href="/login"><i class="fas fa-sign-in-alt fa-2x"></i>Log In</a></li>
+        <li class="item"><a href="/new"><i class="fas fa-user-plus fa-2x"></i>Sign Up</a></li>
         <li class="toggle"><i class="fas fa-bars"></i></a></li>
     </ul>
 </nav>
