--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-expand-md">
     <ul class="menu">
         <li class="logo"><a href="/"><i class="fas fa-atom fa-2x"></i>Modern-Site</a></li>        
-        <li class="item"><a href="#"><i class="far fa-question-circle fa-2x"></i>About</a></li>
+        <li class="item"><a href="/about"><i class="far fa-question-circle fa-2x"></i>About</a></li>
         <li class="item has-submenu">
             <a tabindex="0"><i class="fas fa-globe fa-2x"></i>Services</a>
             <ul class="submenu">
-                <li class="subitem"><a href="#"><i class="fas fa-plane"></i>Travel</a></li>
-                <li class="subitem"><a href="#"><i class="fas fa-hotel"></i>Hotel</a></li>
-                <li class="subitem"><a href="#"><i class="fas fa-utensils"></i>Dining</a></li>
-                <li class="subitem"><a href="#"><i class="fas fa-skiing"></i>Excitment</a></li>
+                <li class="subitem"><a href="/services"><i class="fas fa-plane"></i>Travel</a></li>
+                <li class="subitem"><a href="/services"><i class="fas fa-hotel"></i>Hotel</a></li>
+                <li class="subitem"><a href="/services"><i class="fas fa-utensils"></i>Dining</a></li>
+                <li class="subitem"><a href="/services"><i class="fas fa-skiing"></i>Excitment</a></li>
             </ul>
         </li>
         <li class="item has-submenu">
