setup testimonial link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
 	</div>
 	
 	
-	<div class="row">
+	<div class="row" id="testimonials">
 		<div class="col-12 col-md-6 testimonial">
 			<img class="test" src ="https://images.unsplash.com/photo-1568454537842-d933259bb258?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
 			<p>Modern Site helped me book an amazing hiking getaway! I will never forget the feeling of summiting this mountain, Thanks Modern Site!</p>
