--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -20,7 +20,7 @@
 				<li class="subitem"><a href="/packages">See All</a></li>
             </ul>
         </li>
-        <li class="item"><a href="#"><i class="far fa-comment-dots fa-2x"></i>Testimonials</a></li>
+        <li class="item"><a href="https://nodeportfolio-boayl.run-us-west2.goorm.io/#testimonials"><i class="far fa-comment-dots fa-2x"></i>Testimonials</a></li>
         <li class="item"><a href="#"><i class="far fa-id-card fa-2x"></i>Contact</a>
         </li>
         <li class="item"><a href="/login"><i class="fas fa-sign-in-alt fa-2x"></i>Log In</a></li>
