updated testimonials menu

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
 	</div>
 	
 	<div class="row nav2">
-		<div class="col-12 link-line">
+		<div class="col-12 link-line" id="testimonials-link">
 			<a href="#"><i class="fas fa-campground fa-2x"></i>Camping</a>
 			<a href="#"><i class="fas fa-caravan fa-2x"></i>Glamping</a>
 			<a href="#"><i class="fas fa-hiking fa-2x"></i>Hiking</a>
@@ -52,7 +52,8 @@
 	</div>
 	
 	
-	<div class="row" id="testimonials">
+	
+	<div class="row">
 		<div class="col-12 col-md-6 testimonial">
 			<img class="test" src ="https://images.unsplash.com/photo-1568454537842-d933259bb258?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
 			<p>Modern Site helped me book an amazing hiking getaway! I will never forget the feeling of summiting this mountain, Thanks Modern Site!</p>
