--- a/public/css/index.css
+++ b/public/css/index.css
@@ -28,11 +28,12 @@ div.link-line{
 	flex-direction:row;
 	flex-wrap:wrap;
 	justify-content:space-between;
+	padding-top:5px;
+	padding-bottom:5px;
 	padding-left:10px;
 	padding-right:10px;
 	height:75px;
-	background:#364AA7;
-	margin-bottom:15px;
+	background:#364AA7;	
 	width:100%;
 	
 }
@@ -50,7 +51,11 @@ img.dest{
 	margin-bottom:40px;	
 }
 img.test{
+	margin-top:50px;
 	height: 500px;
+}
+div.row#testimonials{
+	margin-top:50px;
 }
 p{
 	text-align:center;
@@ -74,7 +79,8 @@ p{
 	display:flex;
 	flex-direction:column;
 	font-size:14px;
-	max-width:100%:
+	max-width:100%;
+	height:75px;
 	}
 	div.row.right{
 	flex-direction: column-reverse !important;
